# BPR

./: .gitignore  .gitmodules  Diagrams - Copy.asta  Diagrams.asta  LoRa Settings.txt  geometric_calculations.dwg
ApplicationServer/: ApplicationServer.sln  ApplicationServer.sln.DotSettings  DetectionSystem.db  DetectionSystem.db-shm  DetectionSystem.db-wal
ApplicationServer/ApplicationServer/: ApplicationServer.csproj  Program.cs  Startup.cs  WeatherForecast.cs  appsettings.Development.json  appsettings.json
ApplicationServer/CommonServices/: CommonServices.csproj  JsonExtensions.cs
ApplicationServer/CommonServices.Test/: CommonServices.Test.csproj  DetectionSystemServiceUtilTest.cs  StorageDatabaseUnitTest.cs
ApplicationServer/Data/: Device.cs  Notification.cs
ApplicationServer/DataEFCore/: DataEFCore.csproj  DetectionSystemDbContext.cs
ApplicationServer/DetectionSystemServices/: Program.cs  Startup.cs  WeatherForecast.cs
ApplicationServer/KommuneDashboardServer/: KommuneDashboardServer.csproj  Program.cs  Startup.cs
Diagrams/: BPR.asta  ClassDiagram.asta  DomainModel.asta
Production/: BPR.atsln  BPR.componentinfo.xml  BPR.cproj  CMakeLists.txt  loraWANHandler.c  main.c  mainExample.c
Production/detectionSystem/models/: configuration.c  configuration.h  scanning_result.c  scanning_result.h  time.c  time.h  uplink_message.c  uplink_message.h  uplink_message_util.c  uplink_message_util.h
Production/detectionSystem/tasks/: downlink_handler.c  downlink_handler.h  executionHandler.c  executionHandler.h  execution_handler.c  execution_handler.h  processing_handler.c  processing_handler.h  scanning_handler.c  scanning_handler.h  uplink_handler.c  uplink_handler.h
Production/drivers/: hcsr04driver.c  hcsr04driver.h
Production/util/: debug_util.c  debug_util.h  freertos_util.c  freertos_util.h
(+34 files in other folders)
